feat: do purchase gRPC
